19 Jul 2007 Disable DIAG 308 Re-IPL feature until it is complete - Ivan Warren
21 Jun 2007 revert config_cpu.pat due to problems in testing - Greg
20 Jun 2007 3.05 release doc changes - Jay Maynard
18 Jun 2007 make 3990-6 default control unit for 3390 devices - Greg
18 Jun 2007 configure_cpu now returns when the CPU is fully configured - Greg
08 Jun 2007 Skip making CRW pending in S/370 mode - Kevin Leonard
06 Jun 2007 Fix SYNCHRONIZE_CPUS when numcpu > number of host processors - Greg
06 Jun 2007 Ignore suppress bit in FBA Locate CCW Byte 0 - H.U. - Ivan Warren
26 May 2007 Compare-and-Swap-and-Store feature - Roger Bowler
18 May 2007 Conditional SSKE feature - Roger Bowler
04 May 2007 Restore dasdtab.c RDC response circumvention to prevent command
            reject in DSF for X'0A' command to alternate track - Kevin Leonard
25 Apr 2007 Rename RSS instruction format as SSF - Roger Bowler
04 Apr 2007 Fix Locate Block & Read BlockId for SCSI tape inadvertently
            broken by 31 Aug 2006 preliminary 3590 support change - Fish
26 Mar 2007 Suppress spurious error messages from hercifc - Greg
25 Mar 2007 Ensure started_mask CPU bit is off for terminating cpu thread - Fish by Greg
20 Mar 2007 Redefine ACC_ and ACCTYPE_ macros - Greg
18 Mar 2007 Simplify MULTIPLE_CONTROLLED_DATA_SPACE tests - Greg
17 Mar 2007 Clarify load_address_space_designator code - Greg
16 Mar 2007 Reduce REGS copying by hscmisc.c - Greg
15 Mar 2007 Fix fba when the fba device is > 4G - Greg
10 Mar 2007 machdep.h updates - Greg
08 Mar 2007 concpy rework - Greg
08 Mar 2007 More tweaks to machdep.h i686 code - Greg
07 Mar 2007 Fix store_dw_i686 - Greg
07 Mar 2007 Fix fetch_dw_i686 - Greg
07 Mar 2007 Remove inline attr from vfetchx/vstorex _full functions - Greg
07 Mar 2007 Fix for SIE'd TPROT - Ivan Warren
06 Mar 2007 Fix ckd RDC response - Greg
27 Feb 2007 PR# misc/87 startup messages fix completion - Kevin Leonard
27 Feb 2007 Fix minor glitch in enhanced symbol substitution - Fish